--- a/blobindexjs-sample/src/index.css
+++ b/blobindexjs-sample/src/index.css
@@ -15,3 +15,17 @@ body {
   .btn-primary {
     background-color: #0078D4;
   }
+
+  .div-dyn{    
+    width: 100%;
+    height: 100%;
+  }
+
+  th, td {
+    padding: 10px;
+  }
+
+  a, a:link, a:hover, a:visited{
+    color: black;
+    text-decoration: none;
+  }
